# project-manager

./: .gitignore  Cargo.toml  README.md
docs/: board.md  structure.md
src/: handle.rs  main.rs  old_handle.rs  old_main.rs  tests.rs
