[package]
name = "tart"
version = "0.0.1"
edition = "2021"
authors = ["Daniel Cui <solunian@gmail.com>"]
description = "tart: a command-line project manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
serde = "1.0.192"
serde_yaml = "0.9.27"
